Tue Jan 17 21:07:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/spec_RepositoryManager/HTTP_Client.h:
          Layout change
        * DAnCE/spec_RepositoryManager/HTTP_Handler.{h,cpp}:
          Changed bytecount_ to size_t

Tue Jan 17 21:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/spec_RepositoryManager/Options.h:
          Doxygen improvements

        * DAnCE/spec_RepositoryManager/Options.cpp:
          Layout changes and add some todo's

Tue Jan 17 19:31:56 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc

          Added a project inherit improperly removed by
          Mon Jan 16 16:22:25 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

Mon Jan 16 19:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/spec_RepositoryManager/ZIP_Wrapper.h:
        * DAnCE/spec_RepositoryManager/URL_Parser.h:
        * DAnCE/spec_RepositoryManager/PC_Updater.h:
        * DAnCE/spec_RepositoryManager/PC_Updater_T.cpp:
        * DAnCE/spec_RepositoryManager/HTTP_Handler.h:
        * DAnCE/spec_RepositoryManager/HTTP_Client.h:
          Doxygen improvements

        * DAnCE/spec_RepositoryManager/ZIP_Wrapper.cpp:
        * DAnCE/spec_RepositoryManager/PC_Updater_T.h:
        * DAnCE/spec_RepositoryManager/HTTP_Client.cpp:
        * DAnCE/spec_RepositoryManager/HTTP_Handler.cpp:
          Layout changes

Mon Jan 16 18:36:47 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.hpp

          Addressed some warnings from the RHEL_Static_GCC-3.4.2
          build.

Mon Jan 16 16:48:11 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * DAnCE/spec_RepositoryManager/Options.h:
        * DAnCE/spec_RepositoryManager/Options.cpp:
        * DAnCE/spec_RepositoryManager/PC_Updater.cpp:
        * DAnCE/spec_RepositoryManager/README.txt:
        * DAnCE/spec_RepositoryManager/RMadmin.cpp: